--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
     "bootstrap": "^5.0.0-beta1",
+    "enzyme": "^3.11.0",
+    "enzyme-to-json": "^3.6.1",
     "moment-timezone": "^0.5.32",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
